# HanClassStudio

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.en.md  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.mjs
apps/api/: benchmark_lesson1.py  compare_engines.py  pyproject.toml
apps/api/src/hcs_api/: __init__.py  activity_planner.py  agent.py  agents.py  analysis.py  asset_review.py  blueprint_compatibility.py  blueprint_utils.py  codex_bridge.py  comfyui_archive.py  comfyui_runtime.py  (+50 more)
apps/api/tests/: test_api_routes.py  test_codex_bridge.py  test_comfyui_archive.py  test_comfyui_real_opt_in.py  test_comfyui_runtime.py  test_data.py  test_evidence_alignment.py  test_ffmpeg_video.py  test_greetings_raster_pilot.py  test_illustration_brief.py  test_opt_in_raster_courseware.py  test_phase2b_milestone.py  test_pipeline.py  test_ppt_master_design.py  test_presentation_adapter_assessment.py  test_presentation_asset_reconciliation.py  test_presentation_content.py  test_presentation_media_projection.py  test_presentation_media_requests.py  test_presentation_parity.py  test_presentation_readiness.py  test_presentation_shadow.py  test_presentation_theme.py  test_provider_hub.py  test_provider_registry.py  test_raster_provider_experiment.py  test_responsive_courseware.py  test_source_understanding.py  test_state_evidence_kernel.py  test_svg_illustration.py  test_teacher_media_review.py  test_typography.py  test_v2_cutover.py  test_v2_rendered_output_review.py  test_video_generation.py  test_zero_beginner_courseware_contracts.py
(+114 files in other folders)
