[project]
name = "hanclassstudio-api"
version = "0.1.0"
description = "FastAPI backend for HanClassStudio v0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "python-pptx>=1.0.2",
  "pydantic>=2.8.0",
  "pypinyin>=0.51.0",
  "PyMuPDF>=1.24.0",
  "truststore>=0.10.0"
]

[project.optional-dependencies]
ocr = [
  "paddleocr==3.7.0",
  "paddlepaddle==3.3.0",
  "paddlex[ocr]==3.7.2"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
